--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/styles/style.css" />
-    <link rel="stylesheet" href="./public/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/reset.css" />
     <title>Kaartje</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.2/lib/p5.min.js"></script>
-    <script defer src="./scripts/menu.js"></script>
+    <script defer src="/scripts/menu.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,16 +18,16 @@
   </head>
 
   <body onload="setup()">
-    <script defer src="./scripts/main.js"></script>
+    <script defer src="/scripts/main.js"></script>
 
     <div class="menu">
       <div class="titleBanner">
-        <img src="./img/ui/Bewegen_active.svg" class="bewegen" alt="" />
-        <img src="./img/ui/Knippen.svg" class="knippen" alt="" />
-        <img src="./img/ui/Pins_active.svg" class="pins" alt="" />
-        <img src="./img/ui/Tijdlijn.svg" class="tijdlijn" alt="" />
-        <img src="./img/ui/Gids.svg" class="gids" alt="" />
-        <img src="./img/ui/Links.svg" class="links" alt="" />
+        <img src="/img/ui/Bewegen_active.svg" class="bewegen" alt="" />
+        <img src="/img/ui/Knippen.svg" class="knippen" alt="" />
+        <img src="/img/ui/Pins_active.svg" class="pins" alt="" />
+        <img src="/img/ui/Tijdlijn.svg" class="tijdlijn" alt="" />
+        <img src="/img/ui/Gids.svg" class="gids" alt="" />
+        <img src="/img/ui/Links.svg" class="links" alt="" />
       </div>
       <div class="toggleData">
         <input
