added low res satellite img * custom cursors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/reset.css" />
     <title>Kaartje</title>
@@ -25,7 +28,7 @@
         <img src="/img/ui/Bewegen_active.svg" class="bewegen" alt="" />
         <img src="/img/ui/Knippen.svg" class="knippen" alt="" />
         <img src="/img/ui/Pins_active.svg" class="pins" alt="" />
-        <img src="/img/ui/Tijdlijn.svg" class="tijdlijn" alt="" />
+        <img src="/img/ui/Tijdlijn_active.svg" class="tijdlijn" alt="" />
         <img src="/img/ui/Gids.svg" class="gids" alt="" />
         <img src="/img/ui/Links.svg" class="links" alt="" />
       </div>
